test/types/range/cast-assign-init/illegal-assigns.0-1.good
illegal-assigns.chpl:11: error: assigning to a range with idxType bool from a range with idxType color without an explicit cast
